# yadro_test_task

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run-test-data.sh  tests.txt
.github/workflows/: ci.yml
include/: club.hpp  event.hpp  time.hpp
src/: club.cpp  event.cpp  main.cpp  time.cpp
test-data/: t1-early-bird-attempt.in  t1-early-bird-attempt.sol  t2-client-unknown-error.in  t2-client-unknown-error.sol  t3-rapid-table-switching.in  t3-rapid-table-switching.sol
